feature add image with product entity